--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+
 diffusers
 transformers
 pillow
 accelerate
 peft
 streamlit
+opencv-python
+streamlit_image_select
+omegaconf
+einops
+streamlit_drawable_canvas
