--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-
 diffusers
 transformers
 pillow
 accelerate
 peft
-streamlit
+streamlit==1.18.1
 opencv-python
 streamlit_image_select
 omegaconf
 einops
-streamlit_drawable_canvas
+streamlit_drawable_canvas==0.8.0
+altair>=4.2,<5
